--- a/Launch your vision/Base.lproj/Main.storyboard
+++ b/Launch your vision/Base.lproj/Main.storyboard
@@ -373,42 +373,44 @@ Vision</string>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FBJ-mh-9B6">
                                 <rect key="frame" x="0.0" y="0.0" width="242" height="90"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INSTRUCTIONS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5aO-Iv-J5X">
-                                        <rect key="frame" x="55.5" y="29.5" width="131" height="31"/>
-                                        <fontDescription key="fontDescription" name="Adumu" family="Adumu" pointSize="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INSTRUCTIONS" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumFontSize="24" translatesAutoresizingMaskIntoConstraints="NO" id="5aO-Iv-J5X">
+                                        <rect key="frame" x="20" y="23.5" width="222" height="43"/>
+                                        <fontDescription key="fontDescription" name="Adumu" family="Adumu" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="5aO-Iv-J5X" firstAttribute="centerX" secondItem="FBJ-mh-9B6" secondAttribute="centerX" id="E3D-bl-fH0"/>
                                     <constraint firstAttribute="height" constant="90" id="PlN-RT-AeV"/>
+                                    <constraint firstAttribute="trailing" secondItem="5aO-Iv-J5X" secondAttribute="trailing" id="ZNN-iW-95E"/>
+                                    <constraint firstItem="5aO-Iv-J5X" firstAttribute="leading" secondItem="FBJ-mh-9B6" secondAttribute="leading" constant="20" symbolic="YES" id="g6E-uJ-Qhj"/>
                                     <constraint firstItem="5aO-Iv-J5X" firstAttribute="centerY" secondItem="FBJ-mh-9B6" secondAttribute="centerY" id="kps-gG-63a"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KLf-ky-Rvq">
                                 <rect key="frame" x="0.0" y="90" width="375" height="341"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qAQ-7t-kNQ">
-                                        <rect key="frame" x="30" y="0.0" width="315" height="142"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="3" translatesAutoresizingMaskIntoConstraints="NO" id="qAQ-7t-kNQ">
+                                        <rect key="frame" x="30" y="0.0" width="315" height="121"/>
                                         <attributedString key="attributedText">
-                                            <fragment content="This app has 21 days of prompts To help you get a jumpstart on reaching your goals. ">
+                                            <fragment content="THIS APP HAS 21 DAYS OF PROMPTS TO HELP YOU GET A JUMPSTART ON REACHING YOUR GOALS.">
                                                 <attributes>
-                                                    <font key="NSFont" size="17" name="Aileron-Heavy"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="5" tighteningFactorForTruncation="0.0"/>
+                                                    <color key="NSColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <font key="NSFont" size="24" name="Aileron-Heavy"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineSpacing="6" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUC-qi-TnA">
-                                        <rect key="frame" x="30" y="142" width="315" height="199"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aUC-qi-TnA">
+                                        <rect key="frame" x="30" y="171" width="315" height="170"/>
                                         <attributedString key="attributedText">
-                                            <fragment content="You also have scriptures, quotes, &amp; affirmations. These help ignite, motivate, &amp; inspire you to reach your desired results.">
+                                            <fragment content="YOU ALSO HAVE SCRIPTURES, QUOTES, &amp; AFFIRMATIONS. THESE HELP IGNITE, MOTIVATE, &amp; INSPIRE YOU TO REACH YOUR DESIRED RESULTS.">
                                                 <attributes>
-                                                    <font key="NSFont" size="17" name="Aileron-Heavy"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="5" tighteningFactorForTruncation="0.0"/>
+                                                    <font key="NSFont" size="24" name="Aileron-Heavy"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineSpacing="6" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                         </attributedString>
@@ -419,7 +421,7 @@ Vision</string>
                                 <constraints>
                                     <constraint firstItem="qAQ-7t-kNQ" firstAttribute="top" secondItem="KLf-ky-Rvq" secondAttribute="top" id="5e9-WP-7qX"/>
                                     <constraint firstAttribute="trailing" secondItem="aUC-qi-TnA" secondAttribute="trailing" constant="30" id="Db6-ue-I7v"/>
-                                    <constraint firstItem="aUC-qi-TnA" firstAttribute="top" secondItem="qAQ-7t-kNQ" secondAttribute="bottom" id="FyS-PJ-3t3"/>
+                                    <constraint firstItem="aUC-qi-TnA" firstAttribute="top" secondItem="qAQ-7t-kNQ" secondAttribute="bottom" constant="50" id="FyS-PJ-3t3"/>
                                     <constraint firstAttribute="bottom" secondItem="aUC-qi-TnA" secondAttribute="bottom" id="Hoz-qg-XuA"/>
                                     <constraint firstItem="qAQ-7t-kNQ" firstAttribute="leading" secondItem="KLf-ky-Rvq" secondAttribute="leading" constant="30" id="RgU-MV-SVU"/>
                                     <constraint firstItem="aUC-qi-TnA" firstAttribute="leading" secondItem="KLf-ky-Rvq" secondAttribute="leading" constant="30" id="TXb-NC-7Rv"/>
@@ -431,7 +433,7 @@ Vision</string>
                                 <rect key="frame" x="0.0" y="440" width="375" height="227"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="blr-il-XPM">
-                                        <rect key="frame" x="30" y="4" width="315" height="131"/>
+                                        <rect key="frame" x="20" y="4" width="335" height="131"/>
                                         <attributedString key="attributedText">
                                             <fragment>
                                                 <string key="content">next you will find a page with 
@@ -455,7 +457,7 @@ cards. swipe left to move
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BiP-Tp-GxW">
-                                        <rect key="frame" x="30" y="135" width="315" height="44"/>
+                                        <rect key="frame" x="20" y="135" width="335" height="44"/>
                                         <attributedString key="attributedText">
                                             <fragment>
                                                 <string key="content">click on the last square on the
@@ -503,24 +505,23 @@ cards. swipe left to move
                                     <constraint firstItem="BiP-Tp-GxW" firstAttribute="height" secondItem="blr-il-XPM" secondAttribute="height" multiplier="2:6" id="1SF-eW-mfn"/>
                                     <constraint firstItem="Oim-eC-vWr" firstAttribute="centerY" secondItem="faZ-Cm-8k0" secondAttribute="centerY" id="2zp-db-v2q"/>
                                     <constraint firstItem="blr-il-XPM" firstAttribute="top" secondItem="IGd-lF-0GL" secondAttribute="top" constant="4" id="Gel-Eh-5ne"/>
-                                    <constraint firstAttribute="trailing" secondItem="blr-il-XPM" secondAttribute="trailing" constant="30" id="M5T-Y6-kVS"/>
+                                    <constraint firstAttribute="trailing" secondItem="blr-il-XPM" secondAttribute="trailing" constant="20" symbolic="YES" id="M5T-Y6-kVS"/>
                                     <constraint firstAttribute="trailing" secondItem="Oim-eC-vWr" secondAttribute="trailing" constant="20" symbolic="YES" id="TxG-Fy-g2A"/>
                                     <constraint firstItem="faZ-Cm-8k0" firstAttribute="centerX" secondItem="IGd-lF-0GL" secondAttribute="centerX" id="Xc6-1j-gMD"/>
-                                    <constraint firstItem="BiP-Tp-GxW" firstAttribute="leading" secondItem="IGd-lF-0GL" secondAttribute="leading" constant="30" id="cfC-DM-rAo"/>
+                                    <constraint firstItem="BiP-Tp-GxW" firstAttribute="leading" secondItem="IGd-lF-0GL" secondAttribute="leading" constant="20" symbolic="YES" id="cfC-DM-rAo"/>
                                     <constraint firstItem="BiP-Tp-GxW" firstAttribute="top" secondItem="blr-il-XPM" secondAttribute="bottom" id="gL9-b2-ToA"/>
-                                    <constraint firstItem="blr-il-XPM" firstAttribute="leading" secondItem="IGd-lF-0GL" secondAttribute="leading" constant="30" id="gs4-eR-hyn"/>
+                                    <constraint firstItem="blr-il-XPM" firstAttribute="leading" secondItem="IGd-lF-0GL" secondAttribute="leading" constant="20" symbolic="YES" id="gs4-eR-hyn"/>
                                     <constraint firstAttribute="bottom" secondItem="faZ-Cm-8k0" secondAttribute="bottom" constant="20" symbolic="YES" id="jr7-GN-j0K"/>
                                     <constraint firstItem="faZ-Cm-8k0" firstAttribute="top" secondItem="BiP-Tp-GxW" secondAttribute="bottom" constant="8" symbolic="YES" id="mi9-O6-0CZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="BiP-Tp-GxW" secondAttribute="trailing" constant="30" id="yfe-Td-QYd"/>
+                                    <constraint firstAttribute="trailing" secondItem="BiP-Tp-GxW" secondAttribute="trailing" constant="20" symbolic="YES" id="yfe-Td-QYd"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flower-vertical-rotated" translatesAutoresizingMaskIntoConstraints="NO" id="JH4-sD-wSZ">
-                                <rect key="frame" x="319" y="162" width="212" height="247"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flower-vertical-rotated" translatesAutoresizingMaskIntoConstraints="NO" id="NS8-es-ccb">
-                                <rect key="frame" x="-124" y="98" width="194" height="242"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flower-vertical-rotated" translatesAutoresizingMaskIntoConstraints="NO" id="NS8-es-ccb">
+                                <rect key="frame" x="-120" y="62" width="194" height="319"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="319" id="2p7-a0-TBU"/>
+                                    <constraint firstAttribute="width" constant="194" id="5uz-AJ-j6o"/>
+                                </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sog-Ux-v9z">
                                 <rect key="frame" x="136" y="435" width="103" height="1"/>
@@ -529,6 +530,10 @@ cards. swipe left to move
                                     <constraint firstAttribute="height" constant="1" id="J3T-NW-erN"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flower-vertical-rotated" translatesAutoresizingMaskIntoConstraints="NO" id="JH4-sD-wSZ">
+                                <rect key="frame" x="329" y="160" width="212" height="271"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -539,11 +544,13 @@ cards. swipe left to move
                             <constraint firstItem="Sog-Ux-v9z" firstAttribute="top" secondItem="KLf-ky-Rvq" secondAttribute="bottom" constant="4" id="Np6-ko-jeR"/>
                             <constraint firstItem="EQh-Qa-pu6" firstAttribute="leading" secondItem="FBJ-mh-9B6" secondAttribute="trailing" id="Pez-d3-zr0"/>
                             <constraint firstItem="EQh-Qa-pu6" firstAttribute="top" secondItem="Wfm-oj-b2j" secondAttribute="top" id="YM3-4T-UiZ"/>
+                            <constraint firstItem="NS8-es-ccb" firstAttribute="centerY" secondItem="KLf-ky-Rvq" secondAttribute="centerY" constant="-39" id="b8Q-de-dSG"/>
                             <constraint firstAttribute="bottom" secondItem="IGd-lF-0GL" secondAttribute="bottom" id="d1T-nT-fvf"/>
                             <constraint firstItem="IGd-lF-0GL" firstAttribute="height" secondItem="KLf-ky-Rvq" secondAttribute="height" multiplier="1:1.5" id="eRh-nC-Oso"/>
                             <constraint firstItem="KLf-ky-Rvq" firstAttribute="leading" secondItem="8ZU-QL-qLL" secondAttribute="leading" id="jZU-HI-U1X"/>
                             <constraint firstItem="8ZU-QL-qLL" firstAttribute="trailing" secondItem="IGd-lF-0GL" secondAttribute="trailing" id="kdJ-vN-1GE"/>
                             <constraint firstItem="FBJ-mh-9B6" firstAttribute="top" secondItem="8ZU-QL-qLL" secondAttribute="top" id="oig-dh-aHY"/>
+                            <constraint firstItem="NS8-es-ccb" firstAttribute="leading" secondItem="Wfm-oj-b2j" secondAttribute="leading" constant="-120" id="qCO-Dw-KNe"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Sog-Ux-v9z" secondAttribute="trailing" constant="120" id="rQ3-TE-PAk"/>
                             <constraint firstItem="8ZU-QL-qLL" firstAttribute="trailing" secondItem="KLf-ky-Rvq" secondAttribute="trailing" id="sWk-Cs-3tc"/>
                             <constraint firstItem="IGd-lF-0GL" firstAttribute="top" secondItem="Sog-Ux-v9z" secondAttribute="bottom" constant="4" id="vF7-Vz-BEj"/>
