--- a/Launch your vision/Base.lproj/Main.storyboard
+++ b/Launch your vision/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N8t-c5-cho">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zk3-m3-eAn">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8TI-kt-GBc">
-                                <rect key="frame" x="30" y="84" width="315" height="150"/>
+                                <rect key="frame" x="30" y="40" width="315" height="150"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wR3-xL-xAn">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="150"/>
@@ -48,16 +48,16 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" alpha="0.0" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1kb-N6-1VX">
-                                <rect key="frame" x="0.0" y="238" width="375" height="280"/>
+                                <rect key="frame" x="0.0" y="194" width="375" height="324"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Xgv-jb-YYu">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="162"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gNU-hF-4sR">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="140"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="162"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LOh-UR-DnT">
-                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="140"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="162"/>
                                                         <string key="text">Get
 up</string>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
@@ -77,10 +77,10 @@ up</string>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dqy-0f-XD7">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="140"/>
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="162"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YZn-9v-Ghw">
-                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="140"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="162"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -100,13 +100,13 @@ up</string>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="UOq-Pv-w6d">
-                                        <rect key="frame" x="0.0" y="140" width="375" height="140"/>
+                                        <rect key="frame" x="0.0" y="162" width="375" height="162"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3au-69-aKY">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="140"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="162"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bat-MS-YGS">
-                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="140"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="162"/>
                                                         <string key="text">Get \n
 up</string>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
@@ -126,10 +126,10 @@ up</string>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wp7-Aw-WXi">
-                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="140"/>
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="162"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xop-YN-xyQ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="140"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="162"/>
                                                         <string key="text">Get \n
 up</string>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
@@ -160,7 +160,7 @@ up</string>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Flower" translatesAutoresizingMaskIntoConstraints="NO" id="G4U-tI-GV5">
-                                <rect key="frame" x="266" y="177" width="308" height="226"/>
+                                <rect key="frame" x="266" y="133" width="308" height="226"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="226" id="6Uz-Lv-Voe"/>
                                     <constraint firstAttribute="width" constant="308" id="Usf-S7-Ef0"/>
@@ -351,6 +351,8 @@ Vision</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="s4p-Gt-Khi"/>
                     </view>
+                    <navigationItem key="navigationItem" id="38a-YM-FiD"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="animatedLabel" destination="VWQ-ng-Gpr" id="V6t-cm-q29"/>
                         <outlet property="sub1" destination="eEc-Hz-TVd" id="py4-Ov-gsi"/>
@@ -362,7 +364,7 @@ Vision</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L1g-a7-snG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1514.4000000000001" y="828.93553223388312"/>
+            <point key="canvasLocation" x="2453.5999999999999" y="828.93553223388312"/>
         </scene>
         <!--Instruction View Controller-->
         <scene sceneID="WGT-1p-ny8">
@@ -572,6 +574,7 @@ cards. swipe left to move
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8ZU-QL-qLL"/>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="instructionTitle" destination="5aO-Iv-J5X" id="j5d-G6-fq2"/>
                         <outletCollection property="largDescriptions" destination="qAQ-7t-kNQ" collectionClass="NSMutableArray" id="dBh-2g-gUZ"/>
@@ -582,7 +585,7 @@ cards. swipe left to move
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RKh-Fa-w5v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2492" y="831.63418290854577"/>
+            <point key="canvasLocation" x="3431.1999999999998" y="831.63418290854577"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="Kjs-1s-pa9">
@@ -595,19 +598,19 @@ cards. swipe left to move
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="-10" translatesAutoresizingMaskIntoConstraints="NO" id="myi-6m-wXL">
                                 <rect key="frame" x="69" y="22" width="237.5" height="145.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LAUNCH YOUR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-ZA-RDr">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LAUNCH YOUR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IV-ZA-RDr" customClass="RQShineLabel">
                                         <rect key="frame" x="0.0" y="0.0" width="237.5" height="57.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNextCondensed-Bold" family="Avenir Next Condensed" pointSize="42"/>
                                         <color key="textColor" name="mainn-pink"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vision" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIO-JY-Wei">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vision" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIO-JY-Wei" customClass="RQShineLabel">
                                         <rect key="frame" x="65" y="47.5" width="107.5" height="50.5"/>
                                         <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Bold" family="Bodoni 72" pointSize="42"/>
                                         <color key="textColor" name="mainn-pink"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOOL KIT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eEM-Ru-oxM">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOOL KIT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eEM-Ru-oxM" customClass="RQShineLabel">
                                         <rect key="frame" x="45" y="88" width="147" height="57.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNextCondensed-Bold" family="Avenir Next Condensed" pointSize="42"/>
                                         <nil key="highlightedColor"/>
@@ -821,23 +824,22 @@ cards. swipe left to move
             <point key="canvasLocation" x="3466" y="108"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="DVM-ll-lzF">
+        <scene sceneID="pkd-e8-r5u">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2zs-l9-R2y" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zk3-m3-eAn" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8Bq-fj-zxl">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ySe-QK-ijb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" name="butonColor-3"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="KKR-gh-Ed3"/>
+                        <segue destination="N8t-c5-cho" kind="relationship" relationship="rootViewController" id="chj-Ml-dc9"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ckf-pV-F8g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BYp-4p-ZUD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="605.79710144927537" y="107.8125"/>
+            <point key="canvasLocation" x="1514.4000000000001" y="828.93553223388312"/>
         </scene>
     </scenes>
     <resources>
