--- a/Launch your vision/Base.lproj/Main.storyboard
+++ b/Launch your vision/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zk3-m3-eAn">
-    <device id="retina4_7" orientation="portrait" appearance="dark"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
@@ -619,12 +619,12 @@ right to get a free gift!!!</string>
                                         </variation>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faZ-Cm-8k0">
-                                        <rect key="frame" x="95" y="187" width="185" height="20"/>
+                                        <rect key="frame" x="98.5" y="187" width="178" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="K7W-66-q4V"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Aileron-HeavyItalic" family="Aileron" pointSize="12"/>
-                                        <state key="normal" title="WWW.THEGLAMCOATCH.COM ">
+                                        <state key="normal" title="WWW.THEGLAMCOACH.COM ">
                                             <color key="titleColor" name="webLink-blue"/>
                                         </state>
                                         <variation key="heightClass=regular-widthClass=compact">
